# autoglm-rs

./: Cargo.toml
crates/autoglm-cli/: Cargo.toml
crates/autoglm-cli/src/: main.rs
crates/phone_agent/: Cargo.toml
crates/phone_agent/src/: agent.rs  device_factory.rs  error.rs  lib.rs  screenshot_saver.rs
crates/phone_agent/src/actions/: handler.rs  mod.rs
crates/phone_agent/src/adb/: connection.rs  device.rs  input.rs  mod.rs  screenshot.rs
crates/phone_agent/src/config/: apps.rs  i18n.rs  mod.rs  prompts.rs  timing.rs
crates/phone_agent/src/hdc/: mod.rs
crates/phone_agent/src/model/: client.rs  mod.rs
crates/phone_agent/src/xctest/: mod.rs
docs/plans/: 2026-01-03-adb-rust-port-design.md
src/: actions.rs  agent.rs  config.rs  connection.rs  device.rs  device_factory.rs  error.rs  i18n.rs  input.rs  lib.rs  main.rs  model.rs  prompts.rs  screenshot.rs
