[package]
name = "autoglm-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["process", "time", "rt", "rt-multi-thread", "macros"] }
thiserror = "1"
anyhow = "1"
image = "0.25"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
phf = { version = "0.11", features = ["macros"] }
lazy_static = "1.4"
