[workspace]
resolver = "2"
members = [
    "crates/phone_agent",
    "crates/autoglm-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/anthropics/autoglm-rs"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["process", "time", "rt", "rt-multi-thread", "macros", "sync"] }
futures = "0.3"

# Error handling
thiserror = "1"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Image processing
image = "0.25"
base64 = "0.22"

# Utilities
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
phf = { version = "0.11", features = ["macros"] }
lazy_static = "1.4"
chrono = "0.4"
regex = "1"

# AI/Model client
async-openai = "0.27"

# Internal crates
phone_agent = { path = "crates/phone_agent" }
