[package]
name = "phone_agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Phone automation agent library - Rust port of Open-AutoGLM phone_agent"

[dependencies]
tokio.workspace = true
futures.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
image.workspace = true
base64.workspace = true
uuid.workspace = true
tempfile.workspace = true
phf.workspace = true
lazy_static.workspace = true
chrono.workspace = true
regex.workspace = true
async-openai.workspace = true
tracing.workspace = true
